"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

gtk-v2/src/keys.c: Move down from trunk the bugfixes for keybinding and for
  exiting the login prompt with the escape key.  Some formatting done to break
  long lines now matches trunk codebase, but not a general reformat.  Rework
  some LOG() messages for consistency by changing "gtk::" to "keys.c:".
Kevin Bulgrien 2008-01-24

Spelling corrections.
gtk/gcfclient.man
help/bugreport.h
help/chelp.h
NOTES
README
gnome/gnome-cfclient.man
TODO
INSTALL
x11/cfclient.man
Kevin Bulgrien 2008-01-24

gtk-v2/src/keys.c: Fix for [ 1875657 ] Bogus keybinding too long errors. Made
  more truncation messages consistent, and fixed an inconsistently formatted
  LOG message. Fixed case and shortened message when keybinds are saved.
Kevin Bulgrien 2008-01-20

Per-character keybind support.
gtk-v2/src/keys.c: In save_keys() and keys_init(), a pointless #ifdef WIN32
  was used to attempt to implement per-character keybind files but keys_init()
  is called long before a player can log in, so this had the effect of writing
  keybinds to a file that cannot be loaded.  Oddly, this was under a #ifdef
  WIN32 which is quite inappropriate as if supported, it should be for all
  platforms.  The support is commented out with #if 0 until it can be fixed
  and then re-enabled for all clients. Meanwhile, it surely fixes a WIN32 bug.
Kevin Bulgrien 2008-01-18

common/image.c README: Rename client '.crossfire/crossfire-images/' to
  '.crossfire/image-cache/' to make backups avoid backing it up with a
  generic exclude like "*/*cache*/*" that works for many other packages
  that employ caching.  Included on branch to avoid having two separate
  caches if running both versions of clients for testing.
Kevin Bulgrien 2008-01-05

Fix include order.
 common/metaserver.c
Nicolas Weeger 2008-01-03

Win32 compilation fixes. Remove superflous includes messing everything.